<resources>
    <string name="app_name">Tassel</string>
    <string name="menu">Menu</string>
    <string name="today_special">Today\'s Special</string>
    <string name="gallery">Gallery</string>
    <string name="contact">Contact</string>
    <string name="comments">Comments</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Closed</string>
    <string name="price">Price:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="loading">Loading...</string>
    <string name="where">Where we are?</string>
    <string name="schedule">Schedule:</string>
    <string name="phone">Phone:</string>
    <string name="address">Carrera 11 con Calle 67-61\nZona Chapinero 11001000 Bogotá</string>
    <string name="number">+57 319 2614289</string>
    <string name="name">Name</string>
    <string name="comment">Comment</string>
    <string name="opinion">Thanks for your opinion!</string>
    <string name="opinion_error">Something went wrong, please try again</string>
</resources>
