<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerContact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luis.tassel.Contact">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:cardElevation="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorBackgroundSecondary"
                        android:paddingBottom="15dp">

                        <TextView
                            android:id="@+id/textView22"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/textView21"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="2.5dp"
                            android:layout_toRightOf="@+id/textView21"
                            android:text="@string/number"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/textView19"
                            android:layout_below="@+id/imageView3"
                            android:layout_marginTop="10dp"
                            android:text="@string/phone"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold|italic" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textView20"
                            android:layout_marginTop="10dp"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/address" />

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/textView19"
                            android:layout_below="@+id/textView19"
                            android:layout_marginTop="10dp"
                            android:text="@string/address"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/where"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold|italic" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/drawerPane4"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <!-- Profile Box -->

        <!-- List of Actions (pages) -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/navList4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/colorBackgroundSecondary"
                    android:choiceMode="singleChoice"
                    android:divider="@color/colorPrimary"
                    android:dividerHeight="1dp" />
            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>

</android.support.v4.widget.DrawerLayout>
