<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerSpecial"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.luis.tassel.Special">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackgroundSecondary">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/textView15"
                            android:layout_alignRight="@+id/textView15"
                            android:layout_below="@+id/textView15"
                            android:layout_marginBottom="15dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/loading"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/textView14"
                            android:layout_alignRight="@+id/textView11"
                            android:layout_below="@+id/textView14"
                            android:layout_marginTop="5dp"
                            android:text="@string/loading"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/textView12"
                            android:layout_below="@+id/textView13"
                            android:layout_marginTop="10dp"
                            android:text="@string/ingredients"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@+id/textView12"
                            android:layout_marginLeft="10dp"
                            android:layout_toRightOf="@+id/textView12"
                            android:text="@string/loading"
                            android:textColor="@color/gradient_end"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/textView11"
                            android:layout_below="@+id/textView11"
                            android:layout_marginTop="20dp"
                            android:text="@string/price"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/photo2"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/loading"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="18sp"
                            android:textStyle="bold|italic" />

                        <com.android.volley.toolbox.NetworkImageView
                            android:id="@+id/photo2"
                            android:layout_width="match_parent"
                            android:layout_height="250dp"
                            android:adjustViewBounds="true"
                            android:background="@drawable/gradient_image"
                            android:scaleType="fitCenter" />
                    </RelativeLayout>
                </ScrollView>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/drawerPane3"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <!-- Profile Box -->

        <!-- List of Actions (pages) -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/navList3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@color/colorBackgroundSecondary"
                    android:choiceMode="singleChoice"
                    android:divider="@color/colorPrimary"
                    android:dividerHeight="1dp" />
            </RelativeLayout>
        </ScrollView>

    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
